--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
-    "version": "1.2.0",
+    "name": "paladiumlauncher",
+    "preductname": "Paladium Launcher",
+    "version": "1.2.1",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
     "author": "Luuxis",
-    "url": "http://craftdium.ml/launcherSelvania",
+    "url": "http://185.142.55.88:25569/",
     "engines": {
         "node": "^18.x.x"
     },
